feat: :sparkles: add languages section and improve matrix rain

--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "@mui/lab": "^7.0.0-beta.12",
     "@mui/material": "^7.1.0",
     "@mui/material-nextjs": "^7.1.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/shape-text": "^3.8.1",
+    "@tsparticles/slim": "^3.8.1",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
     "react": "^19.0.0",
