--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^1.2.9",
+    "@ai-sdk/react": "^1.2.12",
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -20,10 +22,12 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/shape-text": "^3.8.1",
     "@tsparticles/slim": "^3.8.1",
+    "ai": "^4.3.16",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tiktoken": "^1.0.21"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
