--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "ai": "^4.3.16",
     "framer-motion": "^12.12.1",
     "next": "15.3.2",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tiktoken": "^1.0.21"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/next": "^8.0.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
